--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/throttler": "^6.5.0",
     "argon2": "^0.44.0",
     "busboy": "^1.6.0",
     "dotenv": "^17.2.3",
